# fintech

./: README.md
Notebooks for videoserien/: README.md  pyproject.toml
Notebooks for videoserien/notebooks/: 1_alpaca_api_kall.ipynb  2_enkel_trading_med_alpaca.ipynb  3_analyse_av_markedsdata.ipynb  4_feature_engineering.ipynb  5_maskinlæring.ipynb  6_backtesting.ipynb  df.csv
